fixed: bullet doesn't align correctly with its text on the context view.

--- a/src/App.css
+++ b/src/App.css
@@ -1129,7 +1129,6 @@ h1 .num-contexts {
 /* In context view, make room for breadcrumbs. */
 .child.show-contexts > .thought-container .bullet {
   position: relative;
-  top: 1.6em;
   background-color: var(--bullet-overlay-color);
 }
 
